syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

// Unary Call
message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_number = 3;
}

// Server Streaming Call
message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    string result_number = 1;
}

// Client Streaming Call
message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    float average_number = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 max_number = 1;
}

// Unary Call w/ error handling implementation
message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1; 
}

service CalculatorService {
    // RPC Unary Call
    rpc Sum(SumRequest) returns (SumResponse) {};

    // RPC Server Streaming Call
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    // RPC Client Streaming Call
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // RPC Bi-Directional Call
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    // RPC Unary Call w/ error handling implementation
    // error handling
    // this RPC will throw an exception if the sent number is negative
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}